[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Katherine CM"]
license = "MIT"
repository = "github.com/KatieUmbra/Portfolio"

[dependencies]

# Runtime
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
once_cell = "1.19"
axum-extra = { version = "0.9", features = ["typed-header"]}
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"]}

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
jsonwebtoken = "9"

# Crypto
argon2 = "0.5"
aes-gcm = "0.10"
password-hash = "0.5"
zeroize = "1.8"
